@@ -54,6 +54,8 @@ struct _GConfPropertyEditorClass
 
 GType gconf_property_editor_get_type    (void);
 
+const gchar *gconf_property_editor_get_key (GConfPropertyEditor *peditor);
+
 GObject *gconf_peditor_new_boolean      (GConfChangeSet      *changeset,
 					 gchar               *key,
 					 GtkWidget           *checkbox);
